# billplz-rs

./: Cargo.toml  README.md
docs/plans/: 2026-02-25-billplz-rs-design.md  2026-02-25-billplz-rs-implementation.md  2026-02-25-cli-mcp-design.md  2026-02-25-cli-mcp-implementation.md
src/: client.rs  error.rs  lib.rs  main.rs
src/api/: bank.rs  bill.rs  collection.rs  mod.rs  payout.rs  payout_collection.rs
src/cli/: config.rs  mod.rs
src/mcp/: mod.rs
src/models/: bank.rs  bill.rs  collection.rs  payout.rs  payout_collection.rs
tests/: bank_api_test.rs  bill_api_test.rs  client_test.rs  collection_api_test.rs  config_test.rs  error_test.rs  models_test.rs  payout_api_test.rs  payout_collection_api_test.rs
