[package]
name = "billplz"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Billplz payment gateway API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
