[package]
name = "billplz"
version = "0.2.0"
edition = "2021"
description = "Rust SDK and CLI for the Billplz payment gateway API"
license = "MIT"
repository = "https://github.com/qhkm/billplz-rs"
keywords = ["billplz", "payment", "fpx", "malaysia"]
categories = ["api-bindings", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "billplz"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"
toml = "0.8"
dirs = "6"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
